--- a/Assets/Menu Lateral - M01a/indexREACT.html
+++ b/Assets/Menu Lateral - M01a/indexREACT.html
@@ -1,4 +1,4 @@
-<nav className="ml_m01a">
+<nav className={`ml_m01a ${styles.ml_m01a}`}>
     <div className={styles.header}>
         <h1>Titulo</h1>
         <div className={styles.button}>
