--- a/Assets/HTML CSS JS/Dark-Light_Mode_Toggle/index.html
+++ b/Assets/HTML CSS JS/Dark-Light_Mode_Toggle/index.html
@@ -28,6 +28,7 @@
             <div class="sky"></div>
             <div class="ground"></div>
         </div>
+        <div class="flash"></div>
     </div>
     <script src="script.js"></script>
 </body>
